add final version 2 with tests

--- a/src/pages/[lang]/[manufacturer]/[category]/index.astro
+++ b/src/pages/[lang]/[manufacturer]/[category]/index.astro
@@ -59,13 +59,9 @@ const owner = siteRepository.getSiteOwner();
 const languages = siteRepository.getAvailableLanguages();
 const currentLanguage = siteRepository.getLanguage(lang);
 const navigationItems = siteRepository.getNavigationItems(lang);
+const allNavigationItems = siteRepository.getAllNavigationItems();
 const t = siteRepository.getTranslator(lang);
 
-// Build navigation items for all languages
-const allNavigationItems: Record<string, any[]> = {};
-for (const language of languages) {
-  allNavigationItems[language.code] = siteRepository.getNavigationItems(language.code);
-}
 ---
 
 <Layout
@@ -80,12 +76,7 @@ for (const language of languages) {
 >
   <Breadcrumb>
     <Breadcrumb.Item>
-      <a
-        href={makeUrl(Astro, {
-          targetLocale: lang,
-          path: makeUrl(Astro, { targetLocale: lang, path: "/" }),
-        })}
-      >
+      <a href={makeUrl(Astro, { targetLocale: lang, path: "/" })}>
         {t("nav.home")}
       </a>
     </Breadcrumb.Item>
