--- a/src/pages/[lang]/[manufacturer]/[category]/[product]/index.astro
+++ b/src/pages/[lang]/[manufacturer]/[category]/[product]/index.astro
@@ -62,13 +62,8 @@ const owner = siteRepository.getSiteOwner();
 const languages = siteRepository.getAvailableLanguages();
 const currentLanguage = siteRepository.getLanguage(lang);
 const navigationItems = siteRepository.getNavigationItems(lang);
+const allNavigationItems = siteRepository.getAllNavigationItems();
 const t = siteRepository.getTranslator(lang);
-
-// Build navigation items for all languages
-const allNavigationItems: Record<string, any[]> = {};
-for (const language of languages) {
-  allNavigationItems[language.code] = siteRepository.getNavigationItems(language.code);
-}
 ---
 
 <Layout
@@ -83,12 +78,7 @@ for (const language of languages) {
 >
   <Breadcrumb>
     <Breadcrumb.Item>
-      <a
-        href={makeUrl(Astro, {
-          targetLocale: lang,
-          path: makeUrl(Astro, { targetLocale: lang, path: "/" }),
-        })}
-      >
+      <a href={makeUrl(Astro, { targetLocale: lang, path: "/", })}>
         {t("nav.home")}
       </a>
     </Breadcrumb.Item>
@@ -98,7 +88,7 @@ for (const language of languages) {
       </a>
     </Breadcrumb.Item>
     <Breadcrumb.Item>
-      <a href={makeUrl(Astro, { targetLocale: lang, path: `${manufacturer.id}/${category.slug}` })}>
+      <a href={makeUrl(Astro, { targetLocale: lang, path: `${manufacturer.id}/${category.slug}`})} >
         {category.name}
       </a>
     </Breadcrumb.Item>
