--- a/src/layouts/FrontPage.astro
+++ b/src/layouts/FrontPage.astro
@@ -4,7 +4,7 @@ import type { Manufacturer } from "../content/manufacturer.repository";
 import type { Product } from "../content/product.repository";
 import Section from "../components/ui/Section.astro";
 import ProductCard from "../components/product/ProductCard.astro";
-import type { MossaicPicture } from "../content/site.repository";
+import type { MossaicPicture } from "../content/frontpage.repository";
 import { CldImage } from "astro-cloudinary";
 import { siteRepository } from "../content";
 import OfficialDistributor from "../components/OfficialDistributor.astro";
