--- a/src/components/ui/Slider.astro
+++ b/src/components/ui/Slider.astro
@@ -34,14 +34,24 @@ const id = "promotedProducts";
     <Carousel.Inner>
       {slides.map((slide, index) => (
         <Carousel.Item active={index === 0}>
-            <CldImage
-              src={slide.img}
-              alt={slide.alt}
-              width={1200}
-              height={600}
-              loading={"eager"}
-              gravity="center"
-            />
+            {slide.img.startsWith('http') ? (
+              <img
+                src={slide.img}
+                alt={slide.alt}
+                width={1200}
+                height={600}
+                loading="eager"
+              />
+            ) : (
+              <CldImage
+                src={slide.img}
+                alt={slide.alt}
+                width={1200}
+                height={600}
+                loading={"eager"}
+                gravity="center"
+              />
+            )}
 
             {items[index].title || items[index].caption ? (
               <div class="carousel-caption d-none d-md-block">
